# keycat

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/api/: keyboard.ts
src/components/: Message.tsx  Messages.tsx
src/stores/: history.tsx  pressed.tsx
